# loilo-pdf

./: .gitignore  Android.mk  CMakeLists.txt  ChangeLog.txt  Makefile.am  README.android  README.md  README.version  build.gradle  gradle.properties  jpegint.h  settings.gradle
app/: build.gradle
app/src/androidTest/java/tv/loilo/pdfiumandroid/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/tv/loilo/pdfiumandroid/: FileUtils.java  MainActivity.java  MainActivity.kt  PdfHost.java  PdfImage.java  PdfPageFragment.java  PdfPagerAdapter.java
app/src/main/res/layout/: activity_main.xml  fragment_pdf_page.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/: gradle-mvn-push.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  gradle.properties  proguard-rules.pro
lib/src/androidTest/java/tv/loilo/pdf/: PdfRendererCompatTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: Android.mk  CMakeLists.txt  NOTE.md
lib/src/main/cpp/include/: loilo.h
lib/src/main/cpp/src/: PdfRendererCompat.cpp
lib/src/main/java/tv/loilo/pdf/: PdfRendererCompat.java
lib/src/main/jni/: Android.mk  Application.mk  PdfRendererCompat.cpp
lib/src/main/jni/utils/: android_bitmap_lock.h  math2d.h
lib/src/main/res/values/: strings.xml
pdfium/: build.gradle  gradle.properties
pdfium/src/androidTest/java/tv/loilo/pdfium/: ApplicationTest.java  PdfRendererCompatTest.java
pdfium/src/main/java/tv/loilo/pdfium/: PdfRenderer.java  PdfRendererCompat.java
pdfium/src/main/jni/: Android.mk  Application.mk  Makefile  PdfDocument.cpp  PdfRenderer.cpp  PdfRendererCompat.cpp
pdfium/src/main/jni/pdfium/core/include/fxcrt/: fx_system.h
